# stapler

./: .gitignore  LICENSE  README.md  build.sh
kits/BLOSC/: build.sh
kits/BYACC/: build.sh
kits/Bento4/: build.sh
kits/CURL/: build.sh
kits/FILE/: build.sh
kits/GDB/: build.sh
kits/GFLAGS/: build.sh
kits/GLOG/: build.sh
kits/GTL/: build.sh
kits/ISC-Projects/: build.sh
kits/NGINX/: build.sh
kits/NPY/: build.sh
kits/OPENSSH/: build.sh
kits/OSQP/: build.sh
kits/OSQP-EIGEN/: build.sh
kits/OpenVDB/: build.sh
kits/PCL/: build.sh
kits/PCRE2/: build.sh
kits/RoboticsLibrary/: build.sh
kits/RoboticsLibrary/rl-20240118/src/rl/util/: CMakeLists.txt
kits/SOAP/: build.sh
kits/TBB/: build.sh
kits/XSIMD/: build.sh
kits/YAML-CPP/: build.sh
kits/ZLMediaKit/: build.sh
kits/abcdk/: build.sh
kits/boost/: build.sh
kits/c-ares/: build.sh
kits/cairo/: build.sh
kits/camport3/: build.sh
kits/cimg/: build.sh
kits/cmake/: build.sh
kits/cpp-httplib/: build.sh
kits/eigen/: build.sh
kits/faiss/: build.sh
kits/fastcgi/: build.sh
kits/ffmpeg/: build.sh
kits/flann/: build.sh
kits/freetype/: build.sh
kits/harfbuzz/: build.sh
kits/jsoncpp/: build.sh
kits/libcoin/: build.sh
kits/libev/: build.sh
kits/libhiredis/: build.sh
kits/libmosquitto/: build.sh
kits/librdkafka/: build.sh
kits/libuuid/: build.sh
kits/libvpx/: build.sh
kits/libxml2/: build.sh
kits/libxslt/: build.sh
kits/libyuv/: build.sh
kits/lighttpd/: build.sh
kits/live555/: build.sh
kits/lz4/: build.sh
kits/mongoose/: build.sh
(+659 files in other folders)
